Add navigation bar and update background and styles

--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Lorraine Yang</title>
+        <link rel="icon" href="./photos/IMG_2999.JPG">
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <script type="text/javascript" src="script.js"></script>
+    </head>
+    
+    <body>
+        <!-- Navigation Bar -->
+    <div id="header">
+        <div class="container">
+            <nav>
+                <img src="photos/Logo.png" class="logo">
+                <ul>
+                    <li><a href="#about-me">Home</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="project.html">Projects</a></li>
+                    <li><a href="blogs.html">Creative Arts</a></li>
+                    <li><a href="#contacts">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+
+        <!-- About Me Session -->
+         <div class="about" id="about-me">
+            <h1>About Me</h1>
+            <p>
+                I'm a rising junior at Cornell University majoring in Statistics with a concentration in Data Science and minoring in Music.
+                My academic and professional interests lie at the intersection of data science, machine learning, and the environment —
+                with a strong passion for applying technical skills to real-world problems in music, conservation bioacoustics, and sustainability.
+            </p>
+            <p>
+                I believe deeply in the power of interdisciplinary work. Whether through research, creative exploration, or analytical projects,
+                I’m excited about uncovering insights that bridge science, art, and social impact.
+            </p>
+            <p>
+                My goal is to integrate data science with my passions for sound, nature, and storytelling to make meaningful contributions across domains.
+            </p>
+         </div>
+        
+        <!-- Contact Information Session -->
+        <div class="contact" id="contact">
+            <h1>Personal Information</h1>
+            <p1>
+                <a class="fas fa-envelope"></a>
+                <a href="mailto:dyang0910@gmail.com">Email: dyang0910@gmail.com</a>
+            </p>
+            <p1>
+                <a class="fas fa-phone"></a>
+                <a href="tel:+5168518816">(516)-851-8816</a>
+            </p>
+            <p1>
+                <a class="fab fa-linkedin"></a>
+                <a href="https://www.linkedin.com/in/lorraine-yang" target="_blank">Linkedln</a>
+            </p>
+            <p1>
+                <i class="fab fa-github"></i>
+                <a href="https://github.com/dyang0910" target="_blank">GitHub</a>
+            </p>
+        </div>
+    </body>
+</html>
