--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
          <div class="about" id="about-me">
             <h1>About Me</h1>
             <p>
-                👋 Hi, I'm Lorraine Yang, a rising junior at Cornell University majoring in Statistics with a concentration in Data Science and minoring in Music.
-                My academic and professional interests lie at the intersection of data science, machine learning, and the environment —
-                with a strong passion for applying technical skills to real-world problems in music, conservation bioacoustics, and sustainability.
+                👋 Hi, I'm Lorraine Yang, a rising junior at Cornell University majoring in Statistics with a concentration in Data Science 
+                and minoring in Music. My academic and professional interests lie at the intersection of data science, machine learning, and the environment.
+                I have a strong passion for applying technical skills to real-world problems in music, conservation bioacoustics, and sustainability.
             </p>
             <p>
                 I believe deeply in the power of interdisciplinary work. Whether through research, creative exploration, or analytical projects,
